<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/a_Team"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="96dp"
        android:text="@string/a_team"
        android:textSize="18sp"
        app:fontFamily="sans-serif-medium"
        app:layout_constraintBottom_toTopOf="@+id/team_a_points1"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="    Team A" />

    <TextView
        android:id="@+id/team_a_score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"

        android:layout_marginLeft="100dp"

        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/team_a_score"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/team_a_points1"
        app:layout_constraintEnd_toStartOf="@+id/team_b_score"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a_Team"
        tools:text="    0     " />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <Button
        android:id="@+id/team_a_points1"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="350dp"
        android:background="@android:color/holo_orange_dark"
        android:onClick="addThreeForTeamA"
        android:text="@string/team_a_points1"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a_Team"
        tools:text="+3 POINTS" />

    <Button
        android:id="@+id/team_a_points2"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_orange_dark"
        android:onClick="addTwoForTeamA"
        android:text="@string/team_a_points2"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team_a_points1"
        tools:text="+2 POINTS" />

    <Button
        android:id="@+id/free_throw_a"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="56dp"
        android:background="@android:color/holo_orange_dark"
        android:onClick="addOneForTeamA"
        android:text="@string/free_throw_a"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.599"
        tools:text="FREE THROW" />

    <Button
        android:id="@+id/action_settings"
        android:layout_width="91dp"
        android:layout_height="48dp"
        android:layout_marginBottom="48dp"
        android:background="@android:color/holo_orange_dark"
        android:onClick="reset_scores"

        android:text="@string/action_settings"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="RESET" />

    <TextView
        android:id="@+id/b_team"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="150dp"
        android:text="@string/b_team"
        android:textSize="18sp"
        app:fontFamily="sans-serif-medium"
        app:layout_constraintBottom_toTopOf="@+id/team_b_points2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/a_Team"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Team B" />

    <TextView
        android:id="@+id/team_b_score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:text="@string/team_b_score"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/team_a_score"
        app:layout_constraintTop_toBottomOf="@+id/b_team"
        tools:text="       0" />

    <Button
        android:id="@+id/team_b_points1"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="110dp"
        android:layout_marginRight="110dp"
        android:background="@android:color/holo_orange_dark"
        android:onClick="addThreeForTeamB"
        android:text="@string/team_b_points1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/team_b_points2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/team_a_points1"
        app:layout_constraintTop_toBottomOf="@+id/team_b_score"
        app:layout_constraintVertical_bias="0.0"
        tools:text="+3 POINTS" />

    <Button
        android:id="@+id/team_b_points2"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="304dp"
        android:background="@android:color/holo_orange_dark"
        android:onClick="addTwoForTeamB"
        android:text="@string/team_b_points2"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.788"
        app:layout_constraintStart_toEndOf="@+id/team_a_points2"
        app:layout_constraintTop_toBottomOf="@+id/team_b_points1"
        tools:text="+2 POINTS" />

    <Button
        android:id="@+id/free_throw_b"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="32dp"
        android:background="@android:color/holo_orange_dark"
        android:onClick="addOneForTeamB"
        android:text="@string/free_throw_b"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.788"
        app:layout_constraintStart_toEndOf="@+id/free_throw_a"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.568"
        tools:text="FREE THROW" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        tools:layout_editor_absoluteX="411dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        tools:layout_editor_absoluteX="411dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        tools:layout_editor_absoluteY="602dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        tools:layout_editor_absoluteX="411dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

</androidx.constraintlayout.widget.ConstraintLayout>